--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="shortcut icon" href="./images/Crab.ico" />
+
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ranchers&display=swap" rel="stylesheet">
 
   <title>Crab'n'Cook | The Game</title>
@@ -14,8 +16,6 @@
   <meta property="og:description" content="When a crab humilliates your father, there's only one possible path... revenge!" />
   <meta property="og:url" content="https://joseacasado.github.io/crabncookgame/" />
   <meta property="og:image" content="./images/InigoStory.jpg" />
-  <meta property="og:image:width" content="300" />
-  <meta property="og:image:height" content="200" />
   <meta property="og:image:alt" content="Game description" />
 
   <link rel="stylesheet" href="style/index.css">
