--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Crab'n'Cook | The Game" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="When a crab humilliates your father, there's only one possible path... revenge!" />
-  <meta property="og:url" content="https://joseacasado.github.io/crabncookgame/" />
+  <meta property="og:url" content="https://joseacasado.github.io/Crab-n-Cook-Game/" />
   <meta property="og:image" content="./images/InigoStory.jpg" />
   <meta property="og:image:alt" content="Game description" />
 
